fixed gap to 52px, added text-align center to body

--- a/flex-exercises/flex4/style.css
+++ b/flex-exercises/flex4/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Courier New', Courier, monospace;
-    
+    text-align: center;
+
   }
   
   img {
@@ -11,9 +12,7 @@ body {
   .title {
     font-size: 36px;
     font-weight: 900;
-    display: flex;
-    justify-content: center;
-    margin: 32px;
+    margin-bottom: 32px;
 }
   
   /* do not edit this footer */
@@ -32,14 +31,12 @@ body {
     display: flex;
     list-style-type: none;
     justify-content: center;
-    text-align: center;
-    margin: 52px;
+    gap: 52px;
     }
   .text {
     display: flex;
     flex-wrap: wrap;
     margin: 52px;
-    width: 200px
 }
 
   
